@@ -1,35 +1,0 @@
-[xcache-common]
-; change me - 64 bit php => /usr/lib64/php/modules/xcache.so
-; 32 bit php => /usr/lib/php/modules/xcache.so
-zend_extension = /usr/local/php/lib/php/extensions/no-debug-non-zts-20090626/xcache.so
- 
-[xcache.admin]
-xcache.admin.auth = On
-xcache.admin.user = "mOo"
-; xcache.admin.pass = md5($your_password)
-xcache.admin.pass = ""
- 
-[xcache]
-xcache.shm_scheme =        "mmap"
-xcache.size  =               32M
-xcache.count =                 1
-xcache.slots =                8K
-xcache.ttl   =              3600
-xcache.gc_interval =         300
- 
-; Same as aboves but for variable cache
-; If you don't know for sure that you need this, you probably don't
-xcache.var_size  =            0M
-xcache.var_count =             1
-xcache.var_slots =            8K
-xcache.var_ttl   =             0
-xcache.var_maxttl   =          0
-xcache.var_gc_interval =     300
- 
-; N/A for /dev/zero
-xcache.readonly_protection = Off
- 
-xcache.mmap_path =    "/dev/zero"
- 
-xcache.cacher =               On
-xcache.stat   =               On
