@@ -5,6 +5,7 @@
 3、优化lamp.sh脚本，以及相关配置文件；
 4、不再支持Apache的httpd-vhosts.conf配置文件，改为单一安装。
 5、phpMyAdmin升级到3.5.6，优化配置文件中的默认语言为简体中文。
+6、优化Xcache脚本(安装完成后，登录xcache管理界面：http://IP地址或域名/xcache，用户名：admin密码：123456)；
 
 
 版本1.0：Release date:2013/01/14
